syntax = "proto3";

package io.harness.pms.execution;

option java_multiple_files = true;

message ExecutableResponse {
  oneof response {
    AsyncExecutableResponse async = 1;
    ChildExecutableResponse child = 2;
    ChildrenExecutableResponse children = 3;
    ChildChainExecutableResponse childChain = 4;
    TaskExecutableResponse task = 5;
    TaskChainExecutableResponse taskChain = 6;
  }
  string metadata = 7;
}

message AsyncExecutableResponse {
  repeated string callbackIds = 1;
}

message ChildExecutableResponse {
  string childNodeId = 1;
}

message ChildrenExecutableResponse {
  message Child {
    string childNodeId = 1;
  }
  repeated Child children = 1;
}

message ChildChainExecutableResponse {
  string nextChildId = 1;
  string previousChildId = 2;
  bytes passThroughData = 3;
  bool lastLink = 4;
  bool suspend = 6;
}

message TaskChainExecutableResponse {
  string taskId = 1;
  TaskMode taskMode = 2;
  bool chainEnd = 3;
  bytes passThroughData = 4;
}

message TaskExecutableResponse {
  string taskId = 1;
  TaskMode taskMode = 2;
}

enum TaskMode {
  NOOP = 0;
  DELEGATE_TASK_V1 = 1;
  DELEGATE_TASK_V2 = 2;
  DELEGATE_TASK_V3 = 3;
}